# leo-rover-autonomous-exploration

./: README.md  leo.pgm  leo.yaml
src/leo_description/: package.xml  setup.cfg  setup.py
src/leo_description/launch/: leo_gz.launch.py  leo_rviz.launch.py
src/leo_description/meshes/: NUC_1.stl  base_link.stl  camera_mount1.1_1.stl  camera_mount2.1_1.stl  endeffector_left_1.stl  fixed_camera_1.stl  lidar_1.stl  manipulator_link1_1.stl  manipulator_shoulder_1.stl
src/leo_description/rviz/: leo_view.rviz  nav2.rviz
src/leo_description/urdf/: leo.gazebo.xacro  leo.urdf.xacro
src/leo_description/worlds/: tb3.sdf
src/leo_explorer/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/leo_explorer/config/: params_costmap.yaml
src/leo_explorer/launch/: explore.launch.py
src/leo_v1/: package.xml  setup.cfg  setup.py
src/leo_v1/launch/: leo_v1_sim.launch.py
src/leo_v2/: package.xml  setup.cfg  setup.py
src/leo_v2/behavior_tree_xml/: modified.xml  nav_to_pose_with_consistent_replanning_and_if_path_becomes_invalid.xml
src/leo_v2/config/: bt_nav.yaml  controller.yaml  planner.yaml
src/leo_v2/launch/: leo_autonav.launch.py
src/leo_v2/leo_v2/: map_saver.py
src/leo_v3/: package.xml  setup.cfg  setup.py
src/leo_v3/config/: px150.yaml
src/leo_v3/launch/: leo_gz.launch.py  leo_rviz.launch.py  px150_gz.launch.py  px150_rviz.launch.py
src/leo_v3/leo_v3/: manipulator_control_gui.py  stretch_ignition_control_action_server
src/leo_v3/meshes/: Lidar_mount_1.dae  Lidar_mount_1.stl  base_plate.dae  camera_mount.dae  camera_mount1.2_1.stl  camera_mount2.2_1.stl  depth_cam.dae  endeffector_right_1.stl  lidar_1.dae  lidar_1.stl  manipulator_base_1.stl  manipulator_camera_1.stl  manipulator_link2_1.stl  manipulator_wrist_1.stl
src/leo_v3/urdf/: d435.urdf.xacro  d435i.urdf.xacro  leo.gazebo.xacro  leo.urdf.xacro  leo_proper.gazebo.xacro  px150.urdf.xacro  px150_control.urdf.xacro  px150_gazebo_configs.urdf.xacro  test_d435i.urdf.xacro  usb_plug.urdf.xacro
src/leo_v4/: package.xml  setup.cfg  setup.py
(+2 files in other folders)
